fix: align content to center

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	padding: 0;
+	margin: 0 auto;
 	width: auto;
 	max-width: 1500px;
 	font-family: 'Quicksand', sans-serif;
